getComputedStyle for outline is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75441

Reviewed by Antonio Gomes.

Source/WebCore:

Implement getComputedStyle for outline.

Test: fast/css/getComputedStyle/getComputedStyle-outline-shorthand.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Add new tests to make sure we return the correct values.

* fast/css/getComputedStyle/getComputedStyle-outline-shorthand-expected.txt: Added.
* fast/css/getComputedStyle/getComputedStyle-outline-shorthand.html: Added.


Canonical link: https://commits.webkit.org/92231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103934 268f45cc-cd09-0410-ab3c-d52691b4dbfc